# api/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.4
 info:
   title: Favorite Game Gauntlet
-  version: 0.7.5
+  version: 0.8.0
 paths:
 
   /auth/signup:
@@ -416,7 +416,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimerAction'
+                $ref: '#/components/schemas/Timer'
         '401':
           description: Authentication required.
           content:
@@ -459,7 +459,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TimerAction'
+                $ref: '#/components/schemas/Timer'
         '401':
           description: Authentication required.
           content:
@@ -761,20 +761,10 @@ components:
           $ref: '#/components/schemas/Duration'
         duration:
           $ref: '#/components/schemas/Duration'
-        timerActionDate:
+        lastActionDate:
           type: string
           format: date-time
-      required: [ state, remainingTime, duration ]
-
-    TimerAction:
-      type: object
-      properties:
-        type:
-          type: string
-          enum: [ 'start', 'pause', 'stop' ]
-        remainingTime:
-          $ref: '#/components/schemas/Duration'
-      required: [ type, remainingTime ]
+      required: [ state, remainingTime, duration, lastActionDate ]
 
     Effect:
       type: object
