# src/controller/timer_controller.go
@@ -2,8 +2,8 @@ package controller
 
 import (
 	"FGG-Service/api"
-	"FGG-Service/common"
-	"FGG-Service/timer_service"
+	"FGG-Service/src/common"
+	"FGG-Service/src/timer/timer_service"
 	"net/http"
 
 	"github.com/labstack/echo/v4"
@@ -30,10 +30,10 @@ func (Server) GetCurrentTimer(ctx echo.Context) error {
 
 func ConvertTimerToDto(timer common.Timer) api.Timer {
 	return api.Timer{
-		Duration:        common.DurationToISO8601(timer.Duration),
-		RemainingTime:   common.DurationToISO8601(timer.RemainingTime),
-		State:           api.TimerState(timer.State),
-		TimerActionDate: timer.TimerActionDate,
+		Duration:       common.DurationToISO8601(timer.Duration),
+		RemainingTime:  common.DurationToISO8601(timer.RemainingTime),
+		State:          api.TimerState(timer.State),
+		LastActionDate: timer.LastActionDate,
 	}
 }
 
@@ -45,22 +45,15 @@ func (Server) PauseCurrentTimer(ctx echo.Context) error {
 		return SendJSONErrorResponse(ctx, err)
 	}
 
-	timerAction, err := timer_service.PauseCurrentTimer(userId)
+	timer, err := timer_service.PauseCurrentTimer(userId)
 
 	if err != nil {
 		return SendJSONErrorResponse(ctx, err)
 	}
 
-	timerActionDto := ConvertTimerActionToDto(timerAction)
+	timerActionDto := ConvertTimerToDto(timer)
 
 	return ctx.JSON(http.StatusOK, timerActionDto)
-}
-
-func ConvertTimerActionToDto(timerAction common.TimerAction) api.TimerAction {
-	return api.TimerAction{
-		Type:          api.TimerActionType(timerAction.Type),
-		RemainingTime: common.DurationToISO8601(timerAction.RemainingTime),
-	}
 }
 
 // StartCurrentTimer (POST /timers/current/start)
@@ -71,13 +64,13 @@ func (Server) StartCurrentTimer(ctx echo.Context) error {
 		return SendJSONErrorResponse(ctx, err)
 	}
 
-	timerAction, err := timer_service.StartCurrentTimer(userId)
+	timer, err := timer_service.StartCurrentTimer(userId)
 
 	if err != nil {
 		return SendJSONErrorResponse(ctx, err)
 	}
 
-	timerActionDto := ConvertTimerActionToDto(timerAction)
+	timerActionDto := ConvertTimerToDto(timer)
 
 	return ctx.JSON(http.StatusOK, timerActionDto)
 }
